--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
       <artifactId>urlrewritefilter</artifactId>
       <version>4.0.3</version>
     </dependency>
+    <dependency>
+      <groupId>javax</groupId>
+      <artifactId>javaee-api</artifactId>
+      <version>7.0</version>
+    </dependency>
   </dependencies>
 
   <build>
